# app/Http/Controllers/Controller.php
@@ -11,6 +11,13 @@ use OpenApi\Annotations as OA;
  *     version="1.0.0",
  *     description="This is auto-generated Swagger API documentation.",
  * )
+ *
+ * @OA\SecurityScheme(
+ *     securityScheme="BearerToken",
+ *     type="http",
+ *     scheme="bearer",
+ *     bearerFormat="JWT"
+ * )
  */
 
 abstract class Controller
